# server/model/app/community/request/app_user.go
@@ -14,8 +14,8 @@ type CaptchaReq struct {
 // Register User register structure
 type Register struct {
 	Account  string `json:"account" example:"用户名"` // 用户名
-	Password string `json:"passWord" example:"密码"` // 密码
-	NickName string `json:"nickName" example:"昵称"` // 昵称
+	Password string `json:"passWord" example:"密码"`  // 密码
+	NickName string `json:"nickName" example:"昵称"`  // 昵称
 }
 
 // LoginPwd 登录（账号密码）
@@ -32,6 +32,8 @@ type LoginTelephone struct {
 
 // LoginThird 登录（第三方授权）
 type LoginThird struct {
+	Plat string `json:"Plat"`
+	Code string `json:"code"`
 }
 
 // ResetPasswordReq 重置密码
@@ -54,17 +56,17 @@ type BindEmailReq struct {
 
 // SetSelfBaseInfoReq 设置用户基本信息
 type SetSelfBaseInfoReq struct {
-	ID          uint64 `json:"-" gorm:"primarykey"`                                                          // 主键ID
-	NickName    string `json:"nickName" gorm:"default:系统用户;comment:用户昵称"`                                    // 用户昵称
-	HeaderImg   string `json:"headerImg" gorm:"comment:用户头像"`                                                // 用户头像
+	ID          uint64 `json:"-" gorm:"primarykey"`                                                            // 主键ID
+	NickName    string `json:"nickName" gorm:"default:系统用户;comment:用户昵称"`                              // 用户昵称
+	HeaderImg   string `json:"headerImg" gorm:"comment:用户头像"`                                              // 用户头像
 	Birthday    string `json:"birthday" gorm:"comment:生日"`                                                   //生日
-	Sex         *int   `json:"sex" gorm:"comment:性别： 0未知、1男、2女"`                                             //性别： 0未知、1男、2女
+	Sex         *int   `json:"sex" gorm:"comment:性别： 0未知、1男、2女"`                                         //性别： 0未知、1男、2女
 	Description string `json:"description" form:"description" gorm:"column:description;comment:描述;size:45;"` //描述
 }
 
 type UserSearch struct {
-	Account  string `json:"account" gorm:"comment:账号"`        //账号
-	NickName string `json:"nickName" gorm:"comment:用户昵称"`     // 用户昵称
+	Account  string `json:"account" gorm:"comment:账号"`            //账号
+	NickName string `json:"nickName" gorm:"comment:用户昵称"`       // 用户昵称
 	Sex      *int   `json:"sex" gorm:"comment:性别： 0未知、1男、2女"` //性别： 0未知、1男、2女
 
 	StartCreatedAt *time.Time `json:"startCreatedAt" form:"startCreatedAt"`
